# trading-bot-rl

./: .coveragerc  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feat.md  fix.md  ops.md  research.md  rfc.md
.github/workflows/: ci.yml
configs/components/: components.yaml
configs/experiments/: dqn_filter_v001.yaml  ppo_filter_smoke.yaml  ppo_filter_v001.yaml  ppo_portfolio_v003.yaml  ppo_selector_v002.yaml  ppo_selector_v002_masked.yaml
configs/risk_profiles/: conservative_paper_v001.yaml  tiny_live_v001.yaml
configs/runtime/: live_guarded.yaml  paper.yaml  research.yaml  shadow.yaml
configs/sweeps/: v003_m3b_grid.json
configs/universes/: starter_equities.yaml  synthetic.yaml
docs/: RUNBOOK.md  acceptance_gates.md  colab_training.md  data_tiers.md  scorecard.md  spec.md
docs/adr/: 0001-use-ports-and-adapters.md  0002-rl-as-trade-filter-first.md  0003-alpaca-as-broker-adapter.md  0004-parquet-plus-relational-storage.md  0005-no-live-self-learning.md  0006-research-shadow-paper-live-same-pipeline.md
kaggle/: kaggle_train.py  kaggle_train_sweep.py  kernel-metadata.template.json
notebooks/: 04_colab_training.ipynb
research/: CHANGELOG.md
research/diary/: 2026-05-06_per_strategy_training_ev.md  2026-05-06_v001_filter_loose_NO_GO.md  2026-05-06_v001_filter_post_phase0_DRAFT_NO_GO.md  (+14 more)
scripts/: kaggle_run.py  kaggle_sweep_run.py  per_strategy_training_ev.py  sweep_set_ranker_threshold.py  train_bc_v003.py  train_set_ranker.py  train_supervised_ranker.py
tests/: conftest.py
(+114 files in other folders)
