[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-swing"
version = "0.1.0"
description = "Reinforcement-learning-assisted equity swing trading bot (research / shadow / paper)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rex" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14",
    "PyYAML>=6.0",
    "click>=8.1",
    "python-dateutil>=2.8",
    "scipy>=1.11",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "torch>=2.1",
    "scikit-learn>=1.3",
    "yfinance>=0.2.40",
    "tqdm>=4.66",
    "rich>=13.7",
]

[project.optional-dependencies]
wrds = ["wrds>=3.2"]
postgres = ["psycopg[binary]>=3.1"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "hypothesis>=6.95",
]

[project.scripts]
rl-swing = "rl_swing.runtime.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rl_swing*"]
namespaces = false

[tool.setuptools.package-data]
rl_swing = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
